# ChangeLog for dev-libs/libotf
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libotf/ChangeLog,v 1.54 2012/11/30 08:31:04 jlec Exp $

  30 Nov 2012; Justin Lecher <jlec@gentoo.org> libotf-0.9.13.ebuild:
  Readd the ~-linux keywords

  30 Nov 2012; Samuli Suominen <ssuominen@gentoo.org> -libotf-0.9.9.ebuild,
  -libotf-0.9.12.ebuild:
  old

*libotf-0.9.13 (30 Nov 2012)

  30 Nov 2012; Samuli Suominen <ssuominen@gentoo.org> +libotf-0.9.13.ebuild,
  +files/libotf-0.9.13-build.patch:
  Version bump wrt #439900 by James Cloos

  14 Nov 2012; Justin Lecher <jlec@gentoo.org> libotf-0.9.9.ebuild:
  Keyworded for ~linux, tested by me

  04 May 2012; Jeff Horelick <jdhore@gentoo.org> libotf-0.9.8.ebuild,
  libotf-0.9.9.ebuild, libotf-0.9.12.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

*libotf-0.9.12 (04 Nov 2010)

  04 Nov 2010; MATSUU Takuto <matsuu@gentoo.org> -libotf-0.9.6.ebuild,
  -libotf-0.9.7.ebuild, +libotf-0.9.12.ebuild:
  Version bumped, bug #341911. Removed old versions.

  22 Jul 2009; Raúl Porcel <armin76@gentoo.org> libotf-0.9.8.ebuild:
  arm/sh/sparc stable wrt #271253

  04 Jun 2009; Tobias Klausmann <klausman@gentoo.org> libotf-0.9.8.ebuild:
  Stable on alpha, bug #271253

  30 May 2009; nixnut <nixnut@gentoo.org> libotf-0.9.8.ebuild:
  ppc stable #271253

  30 May 2009; Brent Baude <ranger@gentoo.org> libotf-0.9.8.ebuild:
  Marking libotf-0.9.8 ppc64 for bug 271253

  28 May 2009; Steve Dibb <beandog@gentoo.org> libotf-0.9.8.ebuild:
  amd64 stable, bug 271253

  27 May 2009; Jeroen Roovers <jer@gentoo.org> libotf-0.9.8.ebuild:
  Stable for HPPA (bug #271253).

  27 May 2009; Christian Faulhammer <fauli@gentoo.org> libotf-0.9.8.ebuild:
  stable x86, bug 271253

*libotf-0.9.9 (27 May 2009)

  27 May 2009; MATSUU Takuto <matsuu@gentoo.org> +libotf-0.9.9.ebuild:
  Version bumped.

  05 Apr 2009; Raúl Porcel <armin76@gentoo.org> libotf-0.9.8.ebuild:
  Add ~sh
