@@ -1,17 +1,27 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 AUX libotf-0.9.13-build.patch 670 SHA256 6def5a73c07d26f7c5c19f5979948f131161707153439d83cdaef5241ce30cb6 SHA512 48e514ca560f1f6572e1a4cba799cedbdeae1dfd80bfb076e2a8bebe582ccf80c22edfa217edd2ec44bb49627c05149e309f287ec90788fbc99fbc0b56f3aba1 WHIRLPOOL fe263055658fa6725e779202e6351d3fc14cb564f23aee67457998d5d3088098e8f19ca37a2b46605b3c24541d7aafdfa9c1559ed0e71b5c17efd1e5db67b6c3
 DIST libotf-0.9.13.tar.gz 388832 SHA256 7bc466ba50425f95b52de12b4ad35320acefcef13ce67bf33edc14abdcfe6908 SHA512 86ddf071df371ee44910afc02432352356bfa1c2a55b44274c95fc4e7ec4fca982a7fcde35aaa63a8cb332e98388a9faf9a94fbf0f39e85668630f77d841ef31 WHIRLPOOL efdfb7b90b3710a81a070b2b07c2af6b622cbd093d66ddf3beeeff1a4a7c26d5ad1372cd8a65b13913e5d2531aafb1b54becf3cb3db06a7437f1879a945a455a
 DIST libotf-0.9.8.tar.gz 389377 SHA256 a3a3396b3d368750249ffb060cddcfd6b919c79efcf01c2086913e137230fdb0 SHA512 d6ef6b2a45f2e3dfe7f0675312dd21593a184d4ddbbd68baf49d2f71afca53120f9b0a9a0987078d1cd0473ac5df3a7589c9c61b2a5667e1611b55600151278e WHIRLPOOL 6e7e84c886d8d95e8d6cde4b05423c5d5a79ee10bd5d980a8eb5228cc54da3f1ca808474e02e89606b59a3ee4d3dc4f763b91d991098c2c9f2f8f45678dbcce8
-EBUILD libotf-0.9.13.ebuild 985 SHA256 3f88b265de0dd05a35857612871abb69f41e54aeabab2804c16bfbeec7eb9319 SHA512 e7005e39ed7c444a08a4f262ff31757f451df95522469c209bc7931bae7dd8350df7464af70b0e723e2c5ea887fbf3ad10a19beeb99b394e9aab03911f848706 WHIRLPOOL 976784951768921faf1389b9f8f71083e59472da739effed98e9d735a51fc569246530c5a0d666f1074913a7219581a26f43826cc5d46b3b62a8717018bdfa98
+EBUILD libotf-0.9.13.ebuild 983 SHA256 a4e5f174df5ae5a3e7d5b87b94c5aaea3b860540f44884136a611036503e0bac SHA512 91bc7ceb537cddb212dd7836056834656e1d08acd1228336f3c93f2e53ed21b7ccd67f1d106e6bf38b271b2ba96c14a3944255d79c0f318b678f1d30771bb2ed WHIRLPOOL e42bc7f25e432a31b0d0a43a96c0ca823d0a57d66afb91fc820c88a4ed6def25f8459781d1ad5fc8c6bdc6996aa3c922fe8ace8a913cb0b277353eaf5a466126
 EBUILD libotf-0.9.8.ebuild 897 SHA256 15fe0bd93efbae8a84c32e93a99972b526bc463a037d83b1a9357f1addbf76a1 SHA512 eea4e8846f69d5d4d21245db7271e010a8d73f4b32d7949109992a1c48a406f69f43054c9348a56604fea97843d9e1768204a7f96e7649fa92dd23132f3c2e6b WHIRLPOOL 76b545705a2bf31d796cb5c6bb47bd88c92bc94465d623c394f7f26e9866634d0c506c12d8374a0e8d58ed18d93ecc840b182e9d9ed28d745a7c4d78b3a9626a
-MISC ChangeLog 6270 SHA256 a5b43b6f08eb9bce3c32c7fe8b6aad887f3c72b4a7c00e862762e96c72aa83fa SHA512 7cc354e3b4b944ea4e3c2609941a5905c7a5b4a099c50310db6556397d033b640aa2c6fae68041c4d68df1f4ca44732e311831edf3a6ab3640caca43ae6f2bee WHIRLPOOL 2cf86b0e26d6ef31fff0da10526da2d7774653fb6f48630b71615eb71c41aedca9b2f837603b7d8878d8a5a76284b59d73062f0bf25baa16801af87aa69b0fc4
+MISC ChangeLog 6377 SHA256 652bfc47de7e651ace5211055fb7af717e5efb2e47b882259604ad272647320d SHA512 48dd3b586f3a2001b2eb082d4f3ec46a1bb4538203546a851b30886d46f9e5301d892925efe885c119b0b4f6a7fbeea993918f5cef51418ffaced7932864cd53 WHIRLPOOL 00c3b198d532c7ea6d0f205c6fb8bcd411d41436d2193e47882bd35f841dca1539c9777868d47d69f6d519bdc6c56451765cf9c0fa64c1691160ae793a88dc8d
 MISC metadata.xml 175 SHA256 5c2b5892c4a52e0f1585a34ed70e94042c3684a5f1021f077b2c5756d51120ce SHA512 ed7f9829a9af24d60df258156e3f96ded30c577e0863b3dd25b3bd379cc389197bfc15e76cbd938cbfa78fdcb0b31f51a8f1466c4871100d4cef0f4540211a82 WHIRLPOOL c60d5aff6d2c41d9cdb4fc40d689da7c6be67252fa8fb8e779591b5bea52af10e4c05993ae410dd4427f40aed7dbb45b78918b82097270354c54d5275a9cdec0
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREKAAYFAlC4bskACgkQgAnW8HDreRbuEwCgoIIzhSP5aU2LMG9hSh32kcnI
-/ZUAn2u5vkB1AAxlYjIaWXdQsTweV6Yt
-=URpF
+iQIcBAEBCAAGBQJRG789AAoJELp701BxlEWfvKgP/3CUbogjgN5Pf37/QOroI0cd
+sp3wY8aTxSYERIdjFvwHhwlZ8dLIe1xDRS87JE+XlGdHiRdQZ0NYCnxiRdWCQd75
+bI4Jgq2Q6mGZYKM9CO1SpZHl3+OOuJr/xefnLSZOIFI21W71L0JYxeW/0JRS8Nz+
+/yWoX3lMqwLGXuJgQob6ABxDi0pQa8nE5ntD7zQHqK6PjYSZQMTsqDbMQr/gv/C0
+zJVhegJ1AQ66AmFrHa2zgb7hvDC1q92vndQ9fHGj6EghIOaiH829TWONvbrU9AqG
+lTLIzBoNCc4dJnsmU4kj8PQ+XKdguC0KGIXOylcrz0e1JUjvCdEZDD4WdQ981SWu
+6sIcRvlDQy9H0YAAg78iZQWGnJc32f4WJaXZEtfHWszhF6uxgcg6jVWaEDiWzCC1
+tVRm+5V0eDevSz0goavzIdkIQlkOpn0ecZ3BB9zJYCO80n6/1DNkWrMT8flwv0/Z
+VyJIps4lKsA0VGEg404PMRhUYB4kaa9OGsxy2+EOiJ8Pl8H8mFUw+/D6A5k46jRp
+5EYCxsXI9kphcqanezeIFPnkD4p9oCXVcyRXO0TjytjZkgOJYkw5J2IMvLVS2l+U
+Jx/SsN4r/ygmANGahZ1tRqkoVujM2v2jZVbulzyxwJ+BPN85QwIdrTqtdFpVdMGL
+KehD97AWFUWfnBkCxPnY
+=iToX
 -----END PGP SIGNATURE-----
