@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/libotf
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libotf/ChangeLog,v 1.54 2012/11/30 08:31:04 jlec Exp $
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libotf/ChangeLog,v 1.55 2013/02/13 16:30:53 ago Exp $
+
+  13 Feb 2013; Agostino Sarubbo <ago@gentoo.org> libotf-0.9.13.ebuild:
+  Stable for ppc64, wrt bug #456544
 
   30 Nov 2012; Justin Lecher <jlec@gentoo.org> libotf-0.9.13.ebuild:
   Readd the ~-linux keywords
